removed router tests because not even sure if it's a good implementation yet